--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -84,13 +84,13 @@ env:
     - name: APP_ENV
       value: development
     - name: APP_VERSION
-      value: 1.0.0
+      value: "1.0.0"
 
     # Database
     - name: MYSQL_HOST
       value: gateway01.ap-southeast-1.prod.aws.tidbcloud.com
     - name: MYSQL_PORT
-      value: 4000
+      value: "4000"
     - name: MYSQL_USER
       value: 3RQZ5aVMPSnSZok.root
     - name: MYSQL_PASSWORD
@@ -98,9 +98,9 @@ env:
     - name: MYSQL_DATABASE
       value: sharing_vision
     - name: MYSQL_MAX_IDLE_CONNS
-      value: 5
+      value: "5"
     - name: MYSQL_MAX_OPEN_CONNS
-      value: 10
+      value: "10"
     - name: MYSQL_SSL_MODE
       value: skip-verify
 
