--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -43,7 +43,7 @@ ingress:
     hosts:
         - host: "" # kosong untuk wildcard, atau isi domain
           paths:
-              - path: /api/golang-test
+              - path: /api/golang-test/(.*|$)
                 pathType: Prefix
     tls: []
 
