--- a/values/values.yaml
+++ b/values/values.yaml
@@ -50,8 +50,8 @@ ingress:
     enabled: true
     className: nginx
     annotations:
-        nginx.ingress.kubernetes.io/rewrite-target: /$1
-        # nginx.ingress.kubernetes.io/use-regex: "true"
+        nginx.ingress.kubernetes.io/rewrite-target: /$2
+        nginx.ingress.kubernetes.io/use-regex: "true"
     hosts:
         - host: ""
           paths:
